[gd_scene load_steps=2 format=3 uid="uid://bftfueubtbhuy"]

[ext_resource type="Script" path="res://weapons/Proyectile.gd" id="1_w5fdp"]

[node name="Proyectile" type="Area2D"]
collision_layer = 4
script = ExtResource("1_w5fdp")
damage = 2

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="LifetimeTimer" type="Timer" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_hitbox_body_entered"]
[connection signal="timeout" from="LifetimeTimer" to="." method="_on_lifetime_timer_timeout"]
